@@ -1,5 +1,7 @@
 Version 1.2.1 (unreleased)
 
+* add support for the libstdc++ parallel_mode (successor of MCSTL),
+  new make targets: library_g++_pmode, tests_g++_pmode, clean_g++_pmode
 * new stxxl file type stxxl::mem_file (for debugging purposes only),
   helps debugging with valgrind because no memory cell ever
   leaves valgrind's control
